bluec-tests/tests/invalid/typedef/redeclare_different_nested_scope.c
int main(void) {
    typedef int MyType;
    typedef signed int MyType;
    typedef signed MyType;

    {
        typedef float MyType;
        float typedef MyType;

        typedef double MyType;  // Error
    }

    return 0;
}
